--- a/docs/styles/styles.css
+++ b/docs/styles/styles.css
@@ -24,7 +24,7 @@ body {
     margin: 20px auto;
     border: 5x;
     text-align: center;
-    background-color: antiquewhite;
+    background-color: rgb(219, 202, 215);
 
 }
 
@@ -35,7 +35,7 @@ body {
     border: 5px;
     text-align: center;
     font-size: 25px;
-    background-color: antiquewhite;
+    background-color: rgb(219, 202, 215);
 
 }
 
@@ -65,8 +65,8 @@ body {
     line-height: 20px; /* Adjusts vertical alignment */
     padding: 10px 15px; /* Adds consistent padding */
     margin: 10px; /* Adds spacing between the links */
-    border: 2px solid rgb(151, 123, 123); /* Adds a border */
-    background-color: rgb(151, 123, 123); /* Matches the button color */
+    border: 2px solid rgb(219, 135, 200); /* Adds a border */
+    background-color: rgb(219, 135, 200); /* Matches the button color */
     color: white; /* Sets text color */
     border-radius: 5px; /* Adds rounded corners */
     text-decoration: none; /* Removes underline */
@@ -75,7 +75,7 @@ body {
 }
 
 #liveLink:hover, #repoLink:hover {
-    background-color: rgb(131, 103, 103); /* Slightly darker color on hover */
+    background-color: rgb(228, 167, 214); /* Slightly darker color on hover */
 }
 
 img {
